Fix campaign banner on mobile

--- a/themes/raiser/sass/_mixins.scss
+++ b/themes/raiser/sass/_mixins.scss
@@ -117,6 +117,12 @@
   }
 }
 
+@mixin xsmall {
+  @media (min-width: 480px) {
+    @content; 
+  }
+}
+
 // Style Mixins
 //================
 
